--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <title>Puppeteer Mocha Scaffold</title>
 </head>
 
 <body>
-    <input type="text" id="value">
-    <input type="submit" value="Check" id="button">
-    <div id="display_answer"></div>
+    <div class="container mx-auto text-center">
+        <div><img src="./img/FizzBuzz_Laura.png" class="m-4" /></div>
+        <p class="m-6 text-2xl font-bold">
+            Instructions: Type in a number of your choice and press the 'Check' button!
+        </p>
+        <div>
+            <input type="text" id="value" class="border-solid border-4 p-1 m-4">
+        </div>
+        <div>
+            <input type="submit" value="Check" id="button" class="bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded">
+        </div>
+        <div id="display_answer" class="text-3xl font-medium mt-4"></div>
+        <p class="mt-8 text-base font-normal">
+            If your number is divisible by 15 you'll see 'FizzBuzz'
+        </p>
+        <p class="mt-4 text-base font-normal">
+            If your number is divisible by 5 you'll see 'Buzz'
+        </p>
+        <p class="mt-4 text-base font-normal">
+            If your number is divisible by 3 you'll see 'Fizz'
+        </p>
+
+    </div>
     <script src="./js/fizz-buzz.js"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', () => {
-                let button = document.getElementById('button')
-                let displayDiv = document.getElementById('display_answer')
-                button.addEventListener('click', () => {
-                    let value = document.getElementById('value').value
-                    let fizzBuzz = new FizzBuzz
-                    let result = fizzBuzz.check(value)
-                    displayDiv.innerHTML = result;
-                })
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            let button = document.getElementById('button')
+            let displayDiv = document.getElementById('display_answer')
+            button.addEventListener('click', () => {
+                let value = document.getElementById('value').value
+                let fizzBuzz = new FizzBuzz
+                let result = fizzBuzz.check(value)
+                displayDiv.innerHTML = result;
             })
-        </script>
+        })
+    </script>
 </body>
 
 </html>
