move index.html to root folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container mx-auto text-center">
-        <div><img src="./img/FizzBuzz_Laura.png" class="m-4" /></div>
+        <div><img src="./src/img/FizzBuzz_Laura.png" class="m-4" /></div>
         <p class="m-6 text-2xl font-bold">
             Instructions: Type in a number of your choice and press the 'Check' button!
         </p>
@@ -33,7 +33,7 @@
         </p>
 
     </div>
-    <script src="./js/fizz-buzz.js"></script>
+    <script src="./src/js/fizz-buzz.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             let button = document.getElementById('button')
